Adding the full implementation of obtaining a list of books of 5 lines from the database

--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -5,40 +5,31 @@
     <title>Книги</title>
     <script src="webjars/jquery/3.0.0/jquery.js"></script>
     <script>
-        $(function(){
+        //$(function(){
             //$("#includeHeader").load("static/header.html");
-            //$.get("/books_list?from=0&to=5 #tr_table", function(data) {
-                //if(data)
-                //$("#body").append(data);
-                //else alert("Данных нет");
-            $("#body").load("/books_list #tr_table", function() {
-                $("#hi").append($(this).find("#tr_table").html());
-            });
-            //});
-        });
+        //});
 
         var n = 5;
         $(document).ready(function(){
+
+            $("#t_body").load("/books_list?from=0&to=5 #tr_table");
+
             $("#showMore").click(function(){
-                //$.get("/books_list?from="+n+"&to="+(n+5)+" #table_tr", function(data) {
-                    //if(data!=null) {
-                  //      $("table").append(data);
-                 //       n += 5;
-                    //}
-                    //else alert("Все данные загружены")
-                //});
-                $("#body").load("/books_list?from="+n+"&count=5 #tr_table", function() {
-                    $("#hi").append($(this).find("#tr_table").html());
-                    n *= 2;
+                $.get("/books_list?from="+n+"&count=5", function(data) {
+                    if($.trim($(data).find("#isn").html())=='') {
+                        alert("Все данные загружены");
+                    }
+                    else {
+                        $("#t_body").append($(data).find("#tr_table"));
+                        n*=2;
+                    }
+
                 });
-
-
             });
         });
     </script>
 </head>
 <body>
-<input type="date">
 <button type="button" onclick=> Добавить книгу</button>
 <h1>Список книг библиотеки</h1>
 <table>
@@ -51,9 +42,7 @@
         <th>Удалить</th>
     </tr>
     </thead>
-    <tbody id="body">
-    </tbody>
-   <!-- <tr id="tr_table"></tr> -->
+    <tbody id="t_body"></tbody>
 </table>
 <button id="showMore" type="button">Показать ещё</button>
 </body>
