Add implementation of deleting row from table

--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 <div th:insert="~{header :: insert}"></div>
+<form>
+    User name:<br>
+    <input type="text" name="username"><br>
+</form>
 <button type="button" onclick=> Добавить книгу</button>
 <h1>Список книг библиотеки</h1>
 <table>
