--- a/src/main/resources/templates/book_form.html
+++ b/src/main/resources/templates/book_form.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div class="modal" id="BookModal">
     <div class="modal-dialog">
         <div class="modal-content">
-
-            <!-- Modal Header -->
             <div class="modal-header">
-                <h4 class="modal-title">Modal Heading</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Внесение данных книги</h4>
             </div>
-
-            <!-- Modal body -->
             <div class="modal-body">
-                Modal body..
+                <form method="post" th:object="${book}" th:action="@{/books/new}">
+                    <label>ISN</label><input type="text" th:field="*{ISN}"/><br/>
+                    <label>Автор</label><input type="text" th:field="*{author}"/><br/>
+                    <label>Название</label><input type="text" th:field="*{title}"/><br/>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Сохранить</button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Отмена</button>
+                    </div>
+                </form>
             </div>
-
-            <!-- Modal footer -->
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-            </div>
-
         </div>
     </div>
 </div>
