--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -14,7 +14,7 @@
 <body>
 <div class="container">
     <div th:insert="~{/fragments/header :: insert}"></div>
-    <h2>Список книг библиотеки</h2>
+    <h2 class=".h2" >Список книг библиотеки</h2>
     <button type="button" id="myBtn" class="btn btn-primary text-light">
         Добавить книгу
     </button>
