--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -11,10 +11,10 @@
     <script src="webjars/popper.js/1.14.3/popper.js" ></script>
     <script src="webjars/bootstrap/4.3.1/js/bootstrap.js"></script>
 </head>
-<body>
+<body id="books">
 <div class="container">
     <div th:insert="~{/fragments/header :: insert}"></div>
-    <h2 class=".h2" >Список книг библиотеки</h2>
+    <h2>Список книг библиотеки</h2>
     <button type="button" id="myBtn" class="btn btn-primary text-light">
         Добавить книгу
     </button>
