--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -11,7 +11,7 @@
     <script src="webjars/popper.js/1.14.3/popper.js" ></script>
     <script src="webjars/bootstrap/4.3.1/js/bootstrap.js"></script>
 </head>
-<body id="books">
+<body>
 <div class="container">
     <div th:insert="~{/fragments/header :: insert}"></div>
     <h2>Список книг библиотеки</h2>
