--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -15,7 +15,7 @@
 <div class="container">
     <div th:insert="~{/fragments/header :: insert}"></div>
     <h2>Список книг библиотеки</h2>
-    <button type="button" id="myBtn" class="btn btn-primary text-light">
+    <button type="button" id="addBtn" class="btn btn-primary text-light">
         Добавить книгу
     </button>
     <table class="table-responsive-md bg-info text-white table-hover ">
