--- a/src/main/resources/templates/books_list.html
+++ b/src/main/resources/templates/books_list.html
@@ -3,7 +3,7 @@
 <body>
 <table>
      <tr id="tr_table" th:each="book : ${book_list}">
-         <td id="isn" th:text="${book.ISN}"></td> <!--th:action="@{/books/edit(isn=${book.ISN})}"-->
+         <td id="isn" th:text="${book.ISN}"></td>
          <td id="author" th:text="${book.author}"></td>
          <td id="title" th:text="${book.title}" ></td>
          <td id="user" th:with="bwt=${book.whoTook}, user=${#authentication.getName()}"
