--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="webjars/jquery/3.0.0/jquery.js"></script>
-    <script src="books_table.js"></script>
+    <script src="books.js"></script>
     <!--<link rel="stylesheet" href="table.css">-->
     <link rel="stylesheet" href="webjars/bootstrap/4.3.1/css/bootstrap.css"/>
     <script src="webjars/popper.js/1.14.3/popper.js" ></script>
